--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -10,7 +10,8 @@ spec:
     - git:
         repoURL: https://github.com/manherna/test-vcluster-gitops.git
         targetRevision: HEAD
-        path: ./application-sets/charts/*
+        directories:
+          - path: ./application-sets/charts/*
     - list:
         elements:
         - namespace: team-a
@@ -22,7 +23,6 @@ spec:
     spec:
       # The project the application belongs to.
       project: default
-
       # Source of the application manifests
       source:
         repoURL: https://github.com/manherna/test-vcluster-gitops.git
