--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -27,7 +27,7 @@ spec:
       source:
         repoURL: https://github.com/manherna/test-vcluster-gitops.git
         targetRevision: HEAD
-        path: '{{path.path}}'
+        path: '{{path}}'
       
       # Destination cluster and namespace to deploy the application
       destination:
