change targetRevision for revision

--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -9,7 +9,7 @@ spec:
       generators:
       - git:
           repoURL: https://github.com/manherna/test-vcluster-gitops.git
-          targetRevision: HEAD
+          revision: HEAD
           directories:
             - path: application-sets/charts/*
       - list:
