remove dot from path

--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -19,7 +19,7 @@ spec:
           - namespace: team-c
   template:      
     metadata:
-      name: '{{.path.basename}}-{{namespace}}'
+      name: '{{path.basename}}-{{namespace}}'
     spec:
       # The project the application belongs to.
       project: default
