--- a/application-sets/charts/vcluster/values.yaml
+++ b/application-sets/charts/vcluster/values.yaml
@@ -1,5 +1,6 @@
 vcluster:
-  image: rancher/k3s:v1.25.16-k3s4-amd64
+  vcluster:
+    image: rancher/k3s:v1.25.16-k3s4-amd64
   sync:
     ingresses:
       enabled: true
