--- a/application-sets/charts/vcluster/values.yaml
+++ b/application-sets/charts/vcluster/values.yaml
@@ -1,6 +1,39 @@
-vcluster:
-  # Targeting vcluster chart inside vcluster parent chart
+  namespace:
+    name: vcluster-k3s 
+  
+  ingress:
+    enabled: true
+    host: vcluster-k3s.argocd.kind.example.com
+    clusterIssuer: certmanager
+
   vcluster:
     image: rancher/k3s:v1.28.2-k3s1
     storage:
-      size: 5Gi
+      size: 2Gi
+    # Resource syncers that should be enabled/disabled.
+    # Enabling syncers will impact RBAC Role and ClusterRole permissions.
+    # To disable a syncer set "enabled: false".
+    # See docs for details - https://www.vcluster.com/docs/architecture/synced-resources
+    sync:
+      ingresses:
+        enabled: true
+
+    # Syncer configuration
+    syncer:
+      extraArgs:
+        - --tls-san=vcluster-k3s.argocd.kind.example.com
+
+    # Configure SecurityContext of the containers in the VCluster pod
+    securityContext:
+      runAsUser: 12345
+      runAsGroup: 12345
+      runAsNonRoot: true
+
+    # Configure fsGroup
+    # The field is specified, all processes of the container are also part of the supplementary group ID 12345
+    fsGroup: 12345
+
+    # If enabled will deploy vcluster in an isolated mode with pod security
+    # standards, limit ranges and resource quotas
+    isolation:
+      enabled: true
