--- a/application-sets/charts/vcluster/values.yaml
+++ b/application-sets/charts/vcluster/values.yaml
@@ -4,7 +4,7 @@
   ingress:
     enabled: true
     host: vcluster-k3s.argocd.kind.example.com
-    clusterIssuer: certmanager
+    clusterIssuer: cert-manager
 
   vcluster:
     image: rancher/k3s:v1.28.2-k3s1
