changing team app

--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -14,8 +14,7 @@ spec:
             - path: charts/*
       - list:
           elements:
-          - namespace: team-a
-          - namespace: team-b
+          - namespace: team-c
   template:      
     metadata:
       name: '{{path.basename}}-{{namespace}}'
