--- a/charts/vcluster/Chart.yaml
+++ b/charts/vcluster/Chart.yaml
@@ -23,6 +23,6 @@ version: 0.0.1
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
 dependencies:
-- name: vcluster
+- name: vcluster/vcluster-k0s
   version: "0.18.*"
   repository: "https://charts.loft.sh"
