--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -22,7 +22,9 @@ spec:
 
   template:
     metadata:
-      name: 'vc-{{.vclusterName}}-{{number}}'
+      name: 'vc-{{.vclusterName}}-{{.number}}'
+    labels: 
+      test: '{{ . | print }}'
     spec:
       # The project the application belongs to.
       project: default
@@ -34,15 +36,15 @@ spec:
         helm:
           parameters:
             - name: "vcluster.syncer.extraArgs[0]"
-              value: "--tls-san={{.vclusterName}}-{{number}}.argocd.kind.example.com"
+              value: "--tls-san={{.vclusterName}}-{{.number}}.argocd.kind.example.com"
             - name: ingress.clusterIssuer
               value: letsencrypt-dns
             - name: ingress.host
-              value: "{{.vclusterName}}-{{number}}.argocd.kind.example.com"
+              value: "{{.vclusterName}}-{{.number}}.argocd.kind.example.com"
       # Destination cluster and namespace to deploy the application
       destination:
         server: https://kubernetes.default.svc
-        namespace: "{{.vclusterName}}-{{number}}"
+        namespace: "{{.vclusterName}}-{{.number}}"
 
       # Sync policy
       syncPolicy:
