--- a/charts/vcluster/values.yaml
+++ b/charts/vcluster/values.yaml
@@ -3,7 +3,7 @@
   
   ingress:
     # Enable ingress record generation
-    enabled: true
+    enabled: false
     # Ingress path type
     pathType: ImplementationSpecific
     ingressClassName: ""
@@ -18,7 +18,6 @@
       #     - vcluster.local
 
   vcluster:
-    image: k0sproject/k0s:v1.28.2-k0s.0
     storage:
       size: 1Gi
 
