--- a/application-sets/vcluster-appset.yaml
+++ b/application-sets/vcluster-appset.yaml
@@ -46,6 +46,7 @@ spec:
         targetRevision: 'HEAD'
         path: ./charts/vcluster
         helm:
+          releaseName: "{{.vclusterName}}-{{.number}}"
           parameters:
             - name: "vcluster.syncer.extraArgs[0]"
               value: "--tls-san={{.vclusterName}}-{{.number}}.argocd.kind.example.com"
