--- a/charts/vcluster/templates/ingress.yaml
+++ b/charts/vcluster/templates/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: {{ .Values.ingress.clusterIssuer }}
   name: {{ .Release.Name  }}-ingress
-  namespace: {{ Release.Namespace  }}
+  namespace: {{ .Release.Namespace  }}
 spec:
   ingressClassName: nginx # use your ingress class name
   tls:
